assessment-krn-k8s/ingress/assessment-krn-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: assessment-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    # ingress.kubernetes.io/ssl-redirect: "false"
  namespace: assessment-krn 
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: assessment-service 
      port:
        number: 80
  rules:
   - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: assessment-service 
            port:
              number: 80
